Integracion servicios CRUD para hoteles
